# gold-trader-cli

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  logging.py  scheduler.py
app/backtest/: __init__.py  engine.py  metrics.py  models.py
app/collectors/: __init__.py  base.py  etf_flows.py  macro_calendar.py  market_data.py  news.py  positioning.py  rates.py
app/db/: __init__.py  init_db.py  models.py  repo.py  session.py
app/evaluation/: __init__.py  evaluator.py  metrics.py  reports.py
app/features/: __init__.py  base.py  macro_features.py  market_features.py  news_features.py  regime_features.py
app/history/: __init__.py  cache.py  gold.py  news.py  rates.py
app/llm/: __init__.py  analyst.py  planner.py  provider.py  schemas.py
app/llm/prompts/: __init__.py  analyst_prompt.py  planner_prompt.py
app/strategy/: __init__.py  risk.py  rules.py  scorer.py  weights.py
app/utils/: __init__.py  time_utils.py
config/: weights.yaml
reports/: scheduled_report.py
tests/: __init__.py  test_cli.py  test_evaluator.py  test_features.py  test_llm_schemas.py  test_repo.py  test_scorer.py
