[project]
name = "gold-trader-cli"
version = "0.1.0"
description = "Gold trading guidance CLI tool — data collection, feature engineering, LLM analysis, rule-based strategy, scheduling, and post-hoc evaluation"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pytest>=8.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
gold-cli = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]
